# qt-easy-logger

./: CMakeLists.txt  README.md  logger.cpp  logger.h  logview.cpp  logview.h  main.cpp  qt-easy-logger.pri  samplewindow.cpp  samplewindow.h
